# pyjot

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .python-version  API.md  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  QUICKREF.md  README.md  ROADMAP.md  flake.nix  pyproject.toml  ruff.toml  setup.py  tox.ini
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: pypi.yaml  tests.yaml
.run/collector/: config.yaml
.run/postgres/: postgresql.conf
examples/: autoinit.py  influx2.py  influxdb3.py  oltp.py
extensions/influxdb/: pyproject.toml
extensions/influxdb/src/jot/influxdb/: __init__.py  influxdb.py
extensions/influxdb/tests/: test_influxdb.py  test_influxdb_env.py
extensions/otlp/: pyproject.toml
extensions/otlp/src/jot/otlp/: __init__.py  otlp.py
extensions/otlp/tests/: test_otlp.py
extensions/prometheus/: pyproject.toml
extensions/prometheus/src/jot/prometheus/: __init__.py  prometheus.py
extensions/prometheus/tests/: test_prometheus.py  test_prometheus_env.py
extensions/psycopg2/: pyproject.toml
extensions/psycopg2/src/jot/psycopg2/: __init__.py
extensions/rollbar/: pyproject.toml
extensions/rollbar/src/jot/rollbar/: __init__.py  rollbar.py
extensions/sentry/: pyproject.toml
extensions/sentry/src/jot/sentry/: __init__.py  sentry.py
extensions/zipkin/: pyproject.toml
extensions/zipkin/src/jot/zipkin/: __init__.py  zipkin.py
extensions/zipkin/tests/: test_zipkin.py
jot/: __init__.py  base.py  decorators.py  facade.py  fanout.py  flush.py  influxdb.py  influxdb3.py  initialize.py  jot.py  log.py  logger.py  otlp.py  pg.py  print.py  prometheus.py  rollbar.py  sentry.py  telemeter.py  util.py  zipkin.py
scenarios/: oltp.py
tests/: conftest.py  decorated_fn.py  test_async_task_cancellation.py  test_async_value.py  test_context_manager.py  test_deterministic_ids.py  test_facade.py  test_fanout.py  test_flush.py  test_generator.py  test_id.py  test_influxdb.py  test_influxdb3.py  test_init.py  test_instrument.py  test_jot.py  test_log.py  test_logger.py  test_meter.py  test_meter_ctor.py  test_meter_no_span.py  test_meter_with_span.py  test_otlp.py  test_pg.py  test_print.py  test_prometheus_env.py  test_rollbar.py  test_sentry.py  test_span.py  test_target.py  test_telemeter.py  test_telemeter_no_span.py  test_telemeter_with_span.py  test_util.py  test_zipkin.py  test_zzz_targets.py
tests/test_async/: test_async_error.py  test_async_task_cancellation.py  test_asyncio_compatibility.py  test_asyncio_edge_cases.py  test_structured_concurrency.py
