[project]
name = "dl-jot"
version = "0.1.0"
description = "A library for instrumenting code and sending telemetry information to an aggregator"
authors = [{ name = "Colin Putney", email = "colin.putney@vannevarlabs.com" }]
requires-python = ">=3.9.0"
dependencies = ["requests~=2.26"]

[project.urls]
homepage = "https://github.com/vannevar-labs/pyjot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
influxdb = ["jot-influxdb"]
otlp = ["jot-otlp"]
prometheus = ["jot-prometheus"]
psycopg2 = ["jot-psycopg2"]
rollbar = ["jot-rollbar"]
sentry = ["jot-sentry"]
zipkin = ["jot-zipkin"]

[dependency-groups]
dev = [
    "mock~=4.0",
    "pytest-asyncio>=0.20.3",
    "pytest-mock~=3.6",
    "pytest-order~=1.0",
    "pytest>=7.0",
    "requests-mock~=1.9.3",
    "tox>=3.25.0",
    "callee>=0.3.1",
    "pre-commit>=2.21.0",
    "tox-uv>=1.13.1",
    "tox-gh-actions>=3.2.0",
    "hatchling>=1.27.0",
    "pytest-asyncio>=0.20.3",
]
prometheus = []

[tool.pytest.ini_options]
mock_use_standalone_module = true
testpaths = ["tests"]
markers = ["rows", "select", "reject"]
filterwarnings = ["ignore::DeprecationWarning:"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["jot"]

[tool.uv.sources]
jot-influxdb = { workspace = true }
jot-otlp = { workspace = true }
jot-prometheus = { workspace = true }
jot-psycopg2 = { workspace = true }
jot-rollbar = { workspace = true }
jot-sentry = { workspace = true }
jot-zipkin = { workspace = true }

[tool.uv.workspace]
members = [
    "extensions/influxdb",
    "extensions/otlp",
    "extensions/prometheus",
    "extensions/psycopg2",
    "extensions/rollbar",
    "extensions/sentry",
    "extensions/zipkin",
]
