[project]
name = "dl-jot"
version = "0.1.0"
description = "A library for instrumenting code and sending telemetry information to an aggregator"
authors = [{ name = "Colin Putney", email = "colin.putney@vannevarlabs.com" }]
requires-python = ">=3.9.0"
dependencies = ["requests~=2.26"]

[project.urls]
homepage = "https://github.com/vannevar-labs/pyjot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
influxdb = []
otel = [
    "opentelemetry-exporter-otlp-proto-grpc>=1.31.1",
    "opentelemetry-exporter-otlp-proto-http>=1.31.1",
]
postgres = ["psycopg2-binary>=2.9.4"]
prometheus = ["prometheus-client>=0.22.1"]
rollbar = ["rollbar>=0.16.3"]
sentry = ["bleach==5.0.1", "sentry-sdk>=1.30.0"]
zipkin = ["requests~=2.26"]

[dependency-groups]
dev = [
    "mock~=4.0",
    "pytest-asyncio>=0.20.3",
    "pytest-mock~=3.6",
    "pytest-order~=1.0",
    "pytest>=7.0",
    "requests-mock~=1.9.3",
    "tox>=3.25.0",
    "callee>=0.3.1",
    "pre-commit>=2.21.0",
    "tox-uv>=1.13.1",
    "tox-gh-actions>=3.2.0",
    "hatchling>=1.27.0",
    "pytest-asyncio>=0.20.3",
]
prometheus = []

[tool.pytest.ini_options]
mock_use_standalone_module = true
testpaths = ["tests"]
markers = [
    "rows",
    "select",
    "reject",
    "py311_plus: tests that require Python 3.11+",
    "py312_plus: tests that require Python 3.12+",
]
filterwarnings = ["ignore::DeprecationWarning:"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["jot"]
